Fix layout issues.

--- a/css/css.css
+++ b/css/css.css
@@ -99,11 +99,8 @@ input[type="number"] {
 	color: #fff;
 }
 
-#loja-container .button-group {
-	text-align: center;
-}
 #loja-container .button-group .button {
-	margin: 0 0.5rem;
+	margin: 8px 0;
 }
 
 .new {
@@ -210,7 +207,8 @@ p.indicados {
 }
 p.indicados img {
 	display: table-cell;
-	height: 14.625rem;
+	height: 14rem;
+	-width: 50%;
 	float: left;
 }
 p.indicados.sem-checkout img {
